--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,22 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Приложение";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE HTML>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Название страницы</title>
+    <meta name="description" content="Описание страницы" />
+    <link rel="stylesheet" type="text/css" href="/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="~/css/Styles.css" />
+    <script type="text/javascript" src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+</head>
+<body class="h-100 w-100 animated">
+        <div class="container w-100 text-center mt-5 fs-5" style="font-family: ' Garamond', 'Georgia' , serif;">
+            <pre>WE CREATE THE WORLD</pre>
+        </div>
+        <div class="container w-100 h-100 text-center">
+            <a class="btn btn-primary" style="margin-top: 15em;" href="~/htmlpage.html">Начать работу</a>
+        </div>
+</body>
+</html>
