--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ASPLAB_2
-@using ASPLAB_2.Models
+﻿@using Lab2CSharp
+@using Lab2CSharp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
