--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -3,3 +3,32 @@
 *@
 @{
 }
+
+@model List<ASPLAB_2.Models.Category>
+
+<h1>Categories</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var category in Model)
+        {
+            <tr>
+                <td>@category.Id</td>
+                <td>@category.Name</td>
+                <td>@category.Description</td>
+                <td>
+                    <a class="btn btn-primary" asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id">Edit</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<p><a class="btn btn-primary" asp-action="Add" asp-controller="Category">Add</a></p>
