--- a/Views/Order/Index.cshtml
+++ b/Views/Order/Index.cshtml
@@ -3,3 +3,32 @@
 *@
 @{
 }
+
+@model List<ASPLAB_2.Models.Order>
+
+<h1>Order</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>User</th>
+            <th>ProductsCost</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var order in Model)
+        {
+            <tr>
+                <td>@order.Id</td>
+                <td>@order.User</td>
+                <td>@order.ProductsCost</td>
+                <td>
+                    <a class="btn btn-primary" asp-controller="Order" asp-action="Edit" asp-route-id="@order.Id">Edit</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<p><a class="btn btn-primary" asp-action="Add" asp-controller="Order">Add</a></p>
