--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -3,3 +3,32 @@
 *@
 @{
 }
+
+@model List<ASPLAB_2.Models.Product>
+
+<h1>Products</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Prise</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var product in Model)
+        {
+            <tr>
+                <td>@product.Id</td>
+                <td>@product.Name</td>
+                <td>@product.Prise</td>
+                <td>
+                    <a class="btn btn-primary" asp-controller="Product" asp-action="Edit" asp-route-id="@product.Id">Edit</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<p><a class="btn btn-primary" asp-action="Add" asp-controller="Product">Add</a></p>
