--- a/Views/Stationery/Edit.cshtml
+++ b/Views/Stationery/Edit.cshtml
@@ -4,13 +4,13 @@
 @{
 }
 
-@model ASPLAB_2.Models.Category
+@model ASPLAB_2.Models.Stationery
 
-<h1>Edit Category</h1>
+<h1>Edit Stationery</h1>
 
 @if (Model is null)
 {
-    <p>No Category was found</p>
+    <p>No Stationery was found</p>
 }
 else 
 {
@@ -26,15 +26,16 @@ else
         </div>
 
         <div class="mt-3">
-            <label class=" form-label">Description</label>
-            <input type="text" class="form-control" asp-for="Description" />
+            <label class=" form-label">Type</label>
+            <input type="text" class="form-control" asp-for="Type" />
         </div>
 
         <div class="mt-3">
             <button type="submit" class="btn btn-primary">Save</button>
             <button type="submit" class="btn btn-danger ms-3"
                     asp-action="Delete"
-                    asp-controller="Category">Delete</button>
+                    asp-controller="Stationery">Delete
+            </button>
         </div>
     </form>
 }
